--- a/grapql-server/package.json
+++ b/grapql-server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^5.0.0",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "uuid": "^11.1.0"
   }
