--- a/exercise-books-backend/package.json
+++ b/exercise-books-backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node --env-file=config.env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^5.0.0",
     "graphql": "^16.11.0",
+    "mongoose": "^8.17.1",
     "uuid": "^11.1.0"
   }
 }
